--- a/OsmAnd/res/values-da/phrases.xml
+++ b/OsmAnd/res/values-da/phrases.xml
@@ -1318,7 +1318,7 @@
     <string name="poi_love_hotel">Kærlighedshotel</string>
     <string name="poi_payment_coins_yes">Mønter</string>
     <string name="poi_payment_coins_no">Mønter accepteres ikke</string>
-    <string name="poi_payment_coins_0.5">$0,5 mønter</string>
+    <string name="poi_payment_coins_0_5">$0,5 mønter</string>
     <string name="poi_payment_coins_50c12">50c, 1€, og 2€ mønter</string>
     <string name="poi_payment_telephone_cards_yes">Telefonkort</string>
     <string name="poi_payment_telephone_cards_no">Telefonkort accepteres ikke</string>
