--- a/OsmAnd/res/values-ca/phrases.xml
+++ b/OsmAnd/res/values-ca/phrases.xml
@@ -1448,7 +1448,7 @@
     <string name="poi_love_hotel">Hotel per parelles</string>
     <string name="poi_payment_coins_yes">Monedes</string>
     <string name="poi_payment_coins_no">No s\'accepten monedes</string>
-    <string name="poi_payment_coins_0.5">monedes de $0,5</string>
+    <string name="poi_payment_coins_0_5">monedes de $0,5</string>
     <string name="poi_payment_coins_50c12">monedes de 50c, 1€, i 2€</string>
     <string name="poi_payment_telephone_cards_yes">Targetes telefòniques</string>
     <string name="poi_payment_telephone_cards_no">No s\'accepten targes de telèfon</string>
