--- a/OsmAnd/res/values-el/phrases.xml
+++ b/OsmAnd/res/values-el/phrases.xml
@@ -1592,7 +1592,7 @@
 
 	<string name="poi_payment_coins_yes">Κέρματα</string>
 	<string name="poi_payment_coins_no">Μη αποδεκτά τα κέρματα</string>
-	<string name="poi_payment_coins_0.5">Κέρματα $0,5</string>
+	<string name="poi_payment_coins_0_5">Κέρματα $0,5</string>
 	<string name="poi_payment_coins_50c12">Κέρματα 50c, 1€ και 2€</string>
 	<string name="poi_payment_telephone_cards_yes">Τηλεφωνικές κάρτες</string>
 	<string name="poi_payment_telephone_cards_no">Μη αποδεκτές οι τηλεφωνικές κάρτες</string>
