--- a/OsmAnd/res/values-es/phrases.xml
+++ b/OsmAnd/res/values-es/phrases.xml
@@ -1319,7 +1319,7 @@
     <string name="poi_internet_access_no">Conexión a Internet: no</string>
     <string name="poi_payment_coins_yes">Monedas</string>
     <string name="poi_payment_coins_no">No acepta monedas</string>
-    <string name="poi_payment_coins_0.5">Monedas de 50c</string>
+    <string name="poi_payment_coins_0_5">Monedas de 50c</string>
     <string name="poi_payment_coins_50c12">Monedas de 50c, 1€ y 2€</string>
     <string name="poi_payment_telephone_cards_yes">Tarjetas de teléfono</string>
     <string name="poi_payment_telephone_cards_no">No acepta tarjetas de teléfono</string>
