--- a/OsmAnd/res/values-fa/phrases.xml
+++ b/OsmAnd/res/values-fa/phrases.xml
@@ -1250,7 +1250,7 @@
     <string name="poi_payment_terminal">کارت‌خوان</string>
     <string name="poi_payment_coins_yes">سکه</string>
     <string name="poi_payment_coins_no">سکه پذیرفته نیست</string>
-    <string name="poi_payment_coins_0.5">سکه‌های 0.5$</string>
+    <string name="poi_payment_coins_0_5">سکه‌های 0.5$</string>
     <string name="poi_payment_coins_50c12">سکه‌های 50c،‏ 1€ و 2€</string>
     <string name="poi_payment_credit_cards_yes">کارت اعتباری</string>
     <string name="poi_payment_credit_cards_no">کارت اعتباری پذیرفته نیست</string>
