--- a/OsmAnd/res/values-fr/phrases.xml
+++ b/OsmAnd/res/values-fr/phrases.xml
@@ -1518,7 +1518,7 @@
 	<string name="poi_industrial_brewery">Type : brasserie</string>
 	<string name="poi_love_hotel">Love hôtel</string>
 
-	<string name="poi_payment_coins_0.5">Pièces de 0,5$</string>
+	<string name="poi_payment_coins_0_5">Pièces de 0,5$</string>
 	<string name="poi_payment_cash_yes">Liquide</string>
 	<string name="poi_payment_cash_no">Liquide non accepté</string>
 	<string name="poi_payment_debit_cards_yes">Cartes de débit</string>
