--- a/OsmAnd/res/values-hu/phrases.xml
+++ b/OsmAnd/res/values-hu/phrases.xml
@@ -1466,7 +1466,7 @@
     <string name="poi_rooms">Szobák száma</string>
     <string name="poi_payment_coins_yes">Érme</string>
     <string name="poi_payment_coins_no">Érmét nem fogad el</string>
-    <string name="poi_payment_coins_0.5">0,50$ érme</string>
+    <string name="poi_payment_coins_0_5">0,50$ érme</string>
     <string name="poi_payment_coins_50c12">50c, 1€ és 2€ érme</string>
     <string name="poi_payment_telephone_cards_yes">Telefonkártya</string>
     <string name="poi_payment_telephone_cards_no">Telefonkártyát nem fogad el</string>
