--- a/OsmAnd/res/values-it/phrases.xml
+++ b/OsmAnd/res/values-it/phrases.xml
@@ -1199,7 +1199,7 @@
 
 	<string name="poi_payment_coins_yes">Monete</string>
 	<string name="poi_payment_coins_no">Monete non accettate</string>
-	<string name="poi_payment_coins_0.5">Monete di $0,5</string>
+	<string name="poi_payment_coins_0_5">Monete di $0,5</string>
 	<string name="poi_payment_coins_50c12">50c, 1€ e monete da 2€</string>
 	<string name="poi_payment_telephone_cards_yes">Schede telefoniche</string>
 	<string name="poi_payment_telephone_cards_no">Non si accettano schede telefoniche</string>
