--- a/OsmAnd/res/values-ja/phrases.xml
+++ b/OsmAnd/res/values-ja/phrases.xml
@@ -1679,7 +1679,7 @@
 	<string name="poi_payment_transport_type">送金の種類(Payment type (transport))</string>
 	<string name="poi_payment_coins_yes">硬貨</string>
 	<string name="poi_payment_coins_no">硬貨不可</string>
-	<string name="poi_payment_coins_0.5">硬貨_50セント硬貨</string>
+	<string name="poi_payment_coins_0_5">硬貨_50セント硬貨</string>
 	<string name="poi_payment_telephone_cards_yes">電話による支払_テレホンカード(Telephone cards)</string>
 	<string name="poi_payment_telephone_cards_no">電話による支払_テレホンカード不可(Telephone cards not accepted)</string>
 	<string name="poi_payment_credit_cards_yes">クレジットカード</string>
