--- a/OsmAnd/res/values/phrases.xml
+++ b/OsmAnd/res/values/phrases.xml
@@ -1604,7 +1604,7 @@
 
 	<string name="poi_payment_coins_yes">Coins</string>
 	<string name="poi_payment_coins_no">Coins not accepted</string>
-	<string name="poi_payment_coins_0.5">$0.5 coins</string>
+	<string name="poi_payment_coins_0_5">$0.5 coins</string>
 	<string name="poi_payment_coins_50c12">50c, 1€, and 2€ coins</string>
 	<string name="poi_payment_telephone_cards_yes">Telephone cards</string>
 	<string name="poi_payment_telephone_cards_no">Telephone cards not accepted</string>
