--- a/OsmAnd/res/values-ru/phrases.xml
+++ b/OsmAnd/res/values-ru/phrases.xml
@@ -609,9 +609,9 @@
 	<string name="poi_bureau_de_change">Обмен валют</string>
 	<string name="poi_accountant">Бухгалтерские услуги</string>
 	<string name="poi_bitcoin_yes">Оплата bitcoin</string>
-	<string name="poi_cave_entrance">Вход в пещеру</string>
+	<string name="poi_cave_entrance">Вход в пещеру;Пещера</string>
 	<string name="poi_peak">Горная вершина;Пик</string>
-	<string name="poi_saddle">Седловая точка (перевал)</string>
+	<string name="poi_saddle">Седловая точка;Седловина</string>
 	<string name="poi_volcano">Вулкан</string>
 	<string name="poi_crater">Кратер</string>
 	<string name="poi_sinkhole">Карстовый провал</string>
