Fix control buttons

--- a/OsmAnd/res/layout/plan_route_info.xml
+++ b/OsmAnd/res/layout/plan_route_info.xml
@@ -587,7 +587,7 @@
 		<include
 			layout="@layout/route_info_menu_control_buttons"
 			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
+			android:layout_height="48dp"
 			android:layout_gravity="bottom" />
 
 	</LinearLayout>
