--- a/OsmAnd/res/values/sizes.xml
+++ b/OsmAnd/res/values/sizes.xml
@@ -281,6 +281,7 @@
 	<dimen name="route_info_card_item_height">56dp</dimen>
 	<dimen name="route_info_list_text_padding">54dp</dimen>
 	<dimen name="route_info_legend_padding">8dp</dimen>
+	<dimen name="route_info_warning_padding">18dp</dimen>
 
 	<dimen name="multi_selection_header_height">52dp</dimen>
 
