--- a/OsmAnd/res/layout/transport_stop_route_item_with_icon.xml
+++ b/OsmAnd/res/layout/transport_stop_route_item_with_icon.xml
@@ -7,24 +7,32 @@
 	android:background="@drawable/transport_stop_route_bg"
 	android:orientation="horizontal">
 
-	<ImageView
-		android:id="@+id/transport_stop_route_icon"
-		android:layout_width="20dp"
-		android:layout_height="20dp"
-		android:layout_gravity="center_vertical"
-		android:layout_margin="4dp"
-		tools:src="@drawable/ic_action_bus_dark" />
-
-	<net.osmand.plus.widgets.TextViewEx
-		android:id="@+id/transport_stop_route_text"
+	<LinearLayout
+		android:id="@+id/button"
 		android:layout_width="wrap_content"
-		android:layout_height="28dp"
-		android:layout_marginEnd="8dp"
-		android:layout_marginRight="8dp"
-		android:gravity="center"
-		android:textColor="@color/color_white"
-		android:textSize="@dimen/default_desc_text_size"
-		osmand:typeface="@string/font_roboto_medium"
-		tools:text="3" />
+		android:layout_height="wrap_content"
+		android:background="?attr/selectableItemBackgroundBorderless">
+
+		<ImageView
+			android:id="@+id/transport_stop_route_icon"
+			android:layout_width="20dp"
+			android:layout_height="20dp"
+			android:layout_gravity="center_vertical"
+			android:layout_margin="4dp"
+			tools:src="@drawable/ic_action_bus_dark" />
+
+		<net.osmand.plus.widgets.TextViewEx
+			android:id="@+id/transport_stop_route_text"
+			android:layout_width="wrap_content"
+			android:layout_height="28dp"
+			android:layout_marginEnd="8dp"
+			android:layout_marginRight="8dp"
+			android:gravity="center"
+			android:textColor="@color/color_white"
+			android:textSize="@dimen/default_desc_text_size"
+			osmand:typeface="@string/font_roboto_medium"
+			tools:text="3" />
+
+	</LinearLayout>
 
 </LinearLayout>
