Fix min max values for steepness and improve ui

--- a/OsmAnd/res/layout/route_info_card.xml
+++ b/OsmAnd/res/layout/route_info_card.xml
@@ -53,7 +53,7 @@
 		<com.github.mikephil.charting.charts.HorizontalBarChart
 			android:id="@+id/chart"
 			android:layout_width="match_parent"
-			android:layout_height="60dp" />
+			android:layout_height="@dimen/route_info_chart_height" />
 
 		<LinearLayout
 			android:id="@+id/route_items"
