--- a/OsmAnd/res/layout/fragment_show_all_routes.xml
+++ b/OsmAnd/res/layout/fragment_show_all_routes.xml
@@ -1,80 +1,226 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:osmand="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	android:background="@color/color_transparent">
 
-	<ImageButton
-		android:id="@+id/back_button"
-		android:layout_width="@dimen/map_button_size"
-		android:layout_height="@dimen/map_button_size"
-		android:layout_gravity="start"
-		android:layout_marginLeft="4dp"
-		android:layout_marginRight="4dp"
-		android:layout_marginTop="@dimen/map_button_spacing"
-		android:background="@drawable/btn_circle"
-		android:contentDescription="@string/shared_string_collapse"
-		android:scaleType="center"
-		tools:src="@drawable/ic_action_test_light" />
-
 	<LinearLayout
 		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:layout_gravity="bottom"
+		android:layout_height="match_parent"
 		android:orientation="vertical"
 		tools:visibility="visible">
-
-		<LinearLayout
-			android:id="@+id/fab_container"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:layout_gravity="right"
-			android:layout_marginBottom="@dimen/map_button_margin"
-			android:layout_marginLeft="@dimen/content_padding"
-			android:layout_marginRight="@dimen/content_padding">
-
-			<ImageButton
-				android:id="@+id/map_my_location_button"
-				android:layout_width="@dimen/map_button_size"
-				android:layout_height="@dimen/map_button_size"
-				android:layout_gravity="bottom"
-				android:background="@drawable/btn_circle"
-				android:contentDescription="@string/shared_string_my_location"
-				tools:src="@drawable/ic_action_test_light" />
-
-			<LinearLayout
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:layout_marginLeft="@dimen/map_button_spacing"
-				android:orientation="vertical">
-
-				<ImageButton
-					android:id="@+id/map_zoom_in_button"
-					android:layout_width="@dimen/map_button_size"
-					android:layout_height="@dimen/map_button_size"
-					android:background="@drawable/btn_circle"
-					android:contentDescription="@string/zoomIn"
-					tools:src="@drawable/ic_action_test_light" />
-
-				<ImageButton
-					android:id="@+id/map_zoom_out_button"
-					android:layout_width="@dimen/map_button_size"
-					android:layout_height="@dimen/map_button_size"
-					android:layout_marginTop="@dimen/map_button_spacing"
-					android:background="@drawable/btn_circle"
-					android:contentDescription="@string/zoomOut"
-					tools:src="@drawable/ic_action_test_light" />
-
-			</LinearLayout>
-
-		</LinearLayout>
 
 		<net.osmand.plus.LockableViewPager
 			android:id="@+id/pager"
 			android:layout_width="match_parent"
-			android:layout_height="200dp"
-			android:layout_gravity="bottom" />
+			android:layout_height="match_parent" />
+
+	</LinearLayout>
+
+	<FrameLayout
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:orientation="horizontal">
+
+		<LinearLayout
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_gravity="start|center_vertical"
+			android:background="?attr/flow_toolbar_bg"
+			android:gravity="center"
+			android:orientation="horizontal">
+
+			<android.support.v7.widget.AppCompatImageView
+				android:id="@+id/back_button_flow"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:background="?attr/selectableItemBackgroundBorderless"
+				android:contentDescription="@string/shared_string_back"
+				android:src="@drawable/ic_arrow_back"
+				android:tint="?attr/primary_icon_color" />
+
+		</LinearLayout>
+
+		<LinearLayout
+			android:id="@+id/toolbar_options_flow"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_gravity="end|center_vertical"
+			android:background="?attr/flow_toolbar_bg"
+			android:gravity="center"
+			android:orientation="horizontal"
+			android:paddingLeft="20dp"
+			android:paddingRight="20dp">
+
+			<android.support.v7.widget.AppCompatImageView
+				android:id="@+id/print_route_flow"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_marginEnd="@dimen/content_padding"
+				android:layout_marginRight="@dimen/content_padding"
+				android:background="?attr/selectableItemBackgroundBorderless"
+				android:contentDescription="@string/print_route"
+				android:src="@drawable/ic_action_gprint_dark"
+				android:tint="?attr/primary_icon_color" />
+
+			<android.support.v7.widget.AppCompatImageView
+				android:id="@+id/save_as_gpx_flow"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:background="?attr/selectableItemBackgroundBorderless"
+				android:contentDescription="@string/shared_string_save_as_gpx"
+				android:src="@drawable/ic_action_gsave_dark"
+				android:tint="?attr/primary_icon_color" />
+
+			<android.support.v7.widget.AppCompatImageView
+				android:id="@+id/share_as_gpx_flow"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_marginStart="@dimen/content_padding"
+				android:layout_marginLeft="@dimen/content_padding"
+				android:background="?attr/selectableItemBackgroundBorderless"
+				android:contentDescription="@string/share_route_as_gpx"
+				android:src="@drawable/ic_action_gshare_dark"
+				android:tint="?attr/primary_icon_color" />
+
+		</LinearLayout>
+
+	</FrameLayout>
+
+	<LinearLayout
+		android:id="@+id/toolbar_layout"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:layout_gravity="top"
+		android:orientation="vertical"
+		android:visibility="gone">
+
+		<LinearLayout
+			android:id="@+id/toolbar_container"
+			android:layout_width="match_parent"
+			android:layout_height="@dimen/dashboard_map_toolbar"
+			android:background="?attr/bg_color"
+			android:gravity="center_vertical"
+			android:orientation="horizontal">
+
+			<android.support.v7.widget.AppCompatImageView
+				android:id="@+id/back_button"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_marginLeft="@dimen/content_padding"
+				android:layout_marginRight="@dimen/content_padding"
+				android:background="?attr/selectableItemBackgroundBorderless"
+				android:contentDescription="@string/shared_string_close"
+				android:src="@drawable/ic_arrow_back"
+				android:tint="?attr/primary_icon_color" />
+
+			<LinearLayout
+				android:layout_width="0dp"
+				android:layout_height="wrap_content"
+				android:layout_marginTop="14dp"
+				android:layout_marginBottom="14dp"
+				android:layout_weight="1"
+				android:orientation="vertical">
+
+				<net.osmand.plus.widgets.TextViewEx
+					android:id="@+id/title"
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:background="@null"
+					android:ellipsize="end"
+					android:lines="1"
+					android:maxLines="1"
+					android:singleLine="true"
+					android:textColor="?attr/searchbar_text"
+					android:textSize="@dimen/default_list_text_size_large"
+					osmand:typeface="@string/font_roboto_medium" />
+
+			</LinearLayout>
+
+			<android.support.v7.widget.AppCompatImageButton
+				android:id="@+id/print_route"
+				style="@style/Widget.AppCompat.ActionButton"
+				android:layout_width="44dp"
+				android:layout_height="48dp"
+				android:contentDescription="@string/print_route"
+				android:src="@drawable/ic_action_gprint_dark"
+				android:tint="?attr/primary_icon_color" />
+
+			<android.support.v7.widget.AppCompatImageButton
+				android:id="@+id/save_as_gpx"
+				style="@style/Widget.AppCompat.ActionButton"
+				android:layout_width="44dp"
+				android:layout_height="48dp"
+				android:contentDescription="@string/shared_string_save_as_gpx"
+				android:src="@drawable/ic_action_gsave_dark"
+				android:tint="?attr/primary_icon_color" />
+
+			<android.support.v7.widget.AppCompatImageButton
+				android:id="@+id/share_as_gpx"
+				style="@style/Widget.AppCompat.ActionButton"
+				android:layout_width="44dp"
+				android:layout_height="48dp"
+				android:layout_marginEnd="@dimen/content_padding_small"
+				android:layout_marginRight="@dimen/content_padding_small"
+				android:contentDescription="@string/share_route_as_gpx"
+				android:src="@drawable/ic_action_gshare_dark"
+				android:tint="?attr/primary_icon_color" />
+
+		</LinearLayout>
+
+		<ImageView
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:layout_gravity="top"
+			android:scaleType="fitXY"
+			android:src="@drawable/bg_contextmenu_shadow" />
+
+	</LinearLayout>
+
+	<LinearLayout
+		android:id="@+id/map_hud_controls"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_gravity="end|bottom"
+		android:layout_marginLeft="@dimen/fab_margin_right"
+		android:layout_marginRight="@dimen/fab_margin_right">
+
+		<ImageButton
+			android:id="@+id/map_my_location_button"
+			android:layout_width="@dimen/map_button_size"
+			android:layout_height="@dimen/map_button_size"
+			android:layout_gravity="bottom"
+			android:background="@drawable/btn_circle"
+			android:contentDescription="@string/shared_string_my_location"
+			tools:src="@drawable/ic_action_test_light" />
+
+		<LinearLayout
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_marginStart="@dimen/map_button_spacing"
+			android:layout_marginLeft="@dimen/map_button_spacing"
+			android:orientation="vertical">
+
+			<ImageButton
+				android:id="@+id/map_zoom_in_button"
+				android:layout_width="@dimen/map_button_size"
+				android:layout_height="@dimen/map_button_size"
+				android:background="@drawable/btn_circle"
+				android:contentDescription="@string/zoomIn"
+				tools:src="@drawable/ic_action_test_light" />
+
+			<ImageButton
+				android:id="@+id/map_zoom_out_button"
+				android:layout_width="@dimen/map_button_size"
+				android:layout_height="@dimen/map_button_size"
+				android:layout_marginTop="@dimen/map_button_spacing"
+				android:background="@drawable/btn_circle"
+				android:contentDescription="@string/zoomOut"
+				tools:src="@drawable/ic_action_test_light" />
+
+		</LinearLayout>
 
 	</LinearLayout>
 
