Route details almost done

--- a/OsmAnd/res/layout/fragment_show_all_routes.xml
+++ b/OsmAnd/res/layout/fragment_show_all_routes.xml
@@ -7,6 +7,7 @@
 	android:background="@color/color_transparent">
 
 	<LinearLayout
+		android:id="@+id/pager_container"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
 		android:orientation="vertical"
